# project-tomoyo

backend/: Cargo.toml  FINAL_FIRST_SHIFT.json  YESYESYES.json  before_rooms.json  checkpoint.json  done.json  epic.json  experimental_both.json  final.json  final_final.json  final_second.json  finished.json  first.json  first.json.bak  initial_timetable.json  initial_timetable_all.json  initial_timetable_first.json  initial_timetable_second.json  killme.json  plan.txt  relations.csv.bak  relations.csv.bak2  relations.csv.bak3  s1i.txt  second.json  sent.json  smjena1.txt  smjena2.txt  suprotna_smjena.txt  teacher_shifts.txt  temporary.json  timetable.json.bak10  timetable.json.bak101  timetable.json.bak102  timetable.json.bak103  timetable.json.bak104  timetable.json.bak105  timetable.json.bak13  timetable.json.bak14  timetable.json.bak15  (+72 more)
backend/export/: classes.csv  relations.csv  rooms.csv  subjects.csv  teachers.csv  timetable.json
backend/full-data-backup-elektro/: classes.csv  rooms.csv  teachers.csv  timetable.json
backend/full-data-backup-mb/: classes.csv  relations.csv  rooms.csv  subjects.csv  teachers.csv
backend/import/: classes.csv  relations.csv  rooms.csv  subjects.csv  teachers.csv  timetable.json
backend/import-backup/: classes.csv  relations.csv  rooms.csv  subjects.csv  teachers.csv  timetable.json
backend/src/: cost.rs  lib.rs  logic.rs  main.rs  regular_tabs.rs  util.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: store.js
frontend/src/lib/tabs/: Classes.svelte  (+14 more)
