[package]
name = "project-tomoyo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
env_logger = "0.10.0"
ws = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
csv = "1.2.1"
serde_json = "1.0"